app-service-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-app
  template:
    metadata:
      labels:
        app: service-app
    spec:
      containers:
      - name: service-app
        image: ramirezdev26/app-service
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-app
  template:
    metadata:
      labels:
        app: query-app
    spec:
      containers:
      - name: query-app
        image: ramirezdev26/app-query
        ports:
        - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket-app
  template:
    metadata:
      labels:
        app: socket-app
    spec:
      containers:
      - name: socket-app
        image: ramirezdev26/app-socket
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: service-app-service
spec:
  selector:
    app: service-app
  type: NodePort  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: query-app-service
spec:
  selector:
    app: query-app
  type: NodePort  
  ports:
    - port: 8081
      targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: socket-app-service
spec:
  selector:
    app: socket-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
